# server

./: .gitignore  CMakeLists.txt  README.md  TODO  client.cpp  client.h  crc16.c  crc16.h  main.cpp  makefile  schema.json  test_cli.cpp  test_srv.cpp  ucli.cpp  ucli.h  uhtml.cpp  uhtml.h  uhttp.cpp  uservice.cpp  uservice.h  usrv.cpp  usrv.h  uweb.h
configure/: path.h.in  version.h.in
content/: serverCtrlPage.html  teapot.html
ctrlPage/: schema.json  serverCtrlPage.cpp  serverCtrlPage.h  serverCtrlPage.html
inc/: ucli.h  uhtml.h  uhttp.h  uservice.h  usrv.h
inc/common/: except.hpp
inc/configure/: version.h
inc/ctrlPage/: serverCtrlPage.h
src/: serverCtrlPage.cpp  ucli.cpp  uhtml.cpp  uhttp.cpp  uservice.cpp  usrv.cpp
src/common/: except.cpp
src/ctrlPage/: serverCtrlPage.cpp
test/: test_cli.cpp  test_srv.cpp
